# multiapp

api-gateway/: go.mod
code-generator/: Dockerfile  README.md  go.mod  go.sum
code-generator/cmd/: main.go
code-generator/internal/code/: code.go  code_test.go
code-generator/internal/service/: generate.go
code-generator/pb/: code_generator.pb.go  code_generator_grpc.pb.go
code-generator/proto/: code_generator.proto
code-generator/types/: types.go
db-service/: Cargo.toml
db-service/src/: common.rs  env.rs  main.rs
email-service/: Cargo.toml  Dockerfile  build.rs
email-service/src/: build.rs  main.rs
email-service/src/proto/: email_service.proto
