[package]
name = "email-service"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = { version = "0.12", features = ["tls"]}
prost = "0.13"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"]}
tokio-stream = { version = "0.1"}
handlebars = "6.0"
serde_json = "1.0"
lettre = { version = "0.11.19", features = ["smtp-transport", "builder", "tokio1-native-tls"]}
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"]}
config = { version = "0.14", features = ["toml"]}
thiserror = "1.0"
anyhow = "1.0"

[build-dependencies]
tonic-build = { version = "0.12", features = ["transport", "prost"] }
